Downgrade to Java 11
SBW-27579